@@ -1,5 +1,5 @@
 /*
- * "$Id: cups-lpd.c,v 1.46 2004/06/29 03:27:35 mike Exp $"
+ * "$Id: cups-lpd.c,v 1.47 2004/08/18 15:40:50 mike Exp $"
  *
  *   Line Printer Daemon interface for the Common UNIX Printing System (CUPS).
  *
@@ -767,7 +767,7 @@ recv_print_job(const char    *dest,	/* I - Destination */
       title[0]   = '\0';
       user[0]    = '\0';
       docname[0] = '\0';
-      banner     = cupsGetOption("job-sheets", num_options, options) != NULL;
+      banner     = cupsGetOption("job-sheets", num_defaults, defaults) != NULL;
 
       while (smart_gets(line, sizeof(line), fp) != NULL)
       {
@@ -1423,5 +1423,5 @@ smart_gets(char *s,			/* I - Pointer to line buffer */
 
 
 /*
- * End of "$Id: cups-lpd.c,v 1.46 2004/06/29 03:27:35 mike Exp $".
+ * End of "$Id: cups-lpd.c,v 1.47 2004/08/18 15:40:50 mike Exp $".
  */
