@@ -3,6 +3,8 @@ CHANGES.txt - 08/18/2004
 
 CHANGES IN CUPS V1.1.21rc2
 
+	- The cups-lpd mini-daemon wasn't using the right
+	  default banner option (STR #851)
 	- Updated the new httpDecode64_2() and httpEncode64_2()
 	  functions to handle arbitrary binary data, not just
 	  text (STR #860)
